# dyn_plot

./: README.md  example.ipynb  pyproject.toml
dyn_plot/: __init__.py
